Fix issue with cards not showing button

--- a/flashcards/src/style.css
+++ b/flashcards/src/style.css
@@ -40,10 +40,13 @@ h1 {
 }
 
 .card__face {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 100%;
-  /* height: 100%; */
-  line-height: 260px;
+  height: 100%;
   color: white;
   text-align: center;
   font-weight: bold;
@@ -58,4 +61,10 @@ h1 {
 .card__face--back {
   background: rgb(90, 151, 91);
   transform: rotateY(180deg);
+}
+
+.btn {
+  margin-top: 8px;
+  border-radius: 2px;
+  background-color: antiquewhite;
 }
